feat: integrate gateway status

--- a/custom_components/tantron/translations/zh-Hans.json
+++ b/custom_components/tantron/translations/zh-Hans.json
@@ -27,6 +27,11 @@
     }
   },
   "entity": {
+    "binary_sensor": {
+      "gateway_online": {
+        "name": "网关状态"
+      }
+    },
     "weather": {
       "weather": {
         "name": "天气"
